--- a/mock/build.gradle
+++ b/mock/build.gradle
@@ -35,4 +35,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //http
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
+    //上面用的rxjava3 保持一致性
+    api 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
