--- a/mock/src/main/AndroidManifest.xml
+++ b/mock/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.woilsy.mock">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application>
         <service android:name=".service.MockService" />
     </application>
