--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation project(path: ':mock')
+    //保持依赖一致
+    implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
