将代码变为依赖，完善体验

--- a/mock/build.gradle
+++ b/mock/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     //http
     api "com.squareup.retrofit2:retrofit:2.9.0"
     api "com.squareup.retrofit2:converter-gson:2.9.0"
-
+    //
+    implementation "org.nanohttpd:nanohttpd:2.2.0"
 }
