--- a/mock/build.gradle
+++ b/mock/build.gradle
@@ -32,9 +32,9 @@ android {
 dependencies {
     def retrofitVersion = "2.9.0"
     //http 需要依赖这3个
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation "com.parkingwang:okhttp3-loginterceptor:0.5"
+    api "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    api "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    api "com.parkingwang:okhttp3-loginterceptor:0.5"
     //httpd
     implementation "org.nanohttpd:nanohttpd:2.2.0"
 }
