--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     //
-    implementation project(path: ':mock')
+//    implementation project(path: ':mock')
+    implementation 'com.woilsy:android-mock:1.0.0'
 }
