--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //保持依赖一致
     implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    //
+    //mock
     implementation project(path: ':mock')
+    //log
+    implementation "com.parkingwang:okhttp3-loginterceptor:0.5"
 }
