--- a/mock/build.gradle
+++ b/mock/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     def retrofitVersion = "2.9.0"
     api "com.squareup.retrofit2:retrofit:$retrofitVersion"
     api "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation 'com.koushikdutta.async:androidasync:2.2.1'
 }
 
 apply from: "../upload.gradle"
