新增MockInitProvider，用于默认配置初始化。

--- a/mock/src/main/AndroidManifest.xml
+++ b/mock/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
 
     <application android:usesCleartextTraffic="true">
         <service android:name=".service.MockService" />
+        <provider
+            android:name=".provider.MockInitProvider"
+            android:authorities="${applicationId}.mock" />
     </application>
 
 </manifest>
