--- a/mock/build.gradle
+++ b/mock/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.library'
 
 android {
 
+    namespace "com.woilsy.mock"
+
     compileSdk app_target_sdk
 
     defaultConfig {
@@ -9,7 +11,7 @@ android {
         targetSdk app_target_sdk
         versionCode 1
         versionName "1.0.0"
-        consumerProguardFiles "consumer-rules.pro"
+        consumerProguardFiles "proguard-rules.pro"
     }
 
     buildTypes {
