--- a/mock-debug/build.gradle
+++ b/mock-debug/build.gradle
@@ -1,9 +1,8 @@
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 
 android {
-    namespace 'com.woilsy.mock.debug'
+
+    namespace "com.woilsy.mock"
 
     compileSdk app_target_sdk
 
@@ -31,9 +30,12 @@ android {
 }
 
 dependencies {
-
-    api project(':mock-annotation')
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    def retrofitVersion = "2.9.0"
+    api "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    api "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation 'com.koushikdutta.async:androidasync:2.2.1'
+    implementation project(':mock-annotation')
+    compileOnly  "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 }
 
 apply from: "./upload.gradle"
